--- a/apps/mp/pages/login/index.wxml
+++ b/apps/mp/pages/login/index.wxml
@@ -25,8 +25,7 @@
       <!-- 登录按钮 -->
       <button
         class="login-btn"
-        open-type="getUserProfile"
-        bindgetuserprofile="onGetUserProfile"
+        bindtap="onLoginClick"
         wx:if="{{!loading}}"
       >
         <view class="btn-content">
